chore: update class structure
Co-Authored-By: Cameron Fairchild <cameron@fairchild.dev>
Co-Authored-By: Eugene-hu <85906264+eugene-hu@users.noreply.github.com>
Co-Authored-By: philanthrope <31426574+ifrit98@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,4 @@ services:
       - SENTRY_DSN=${SENTRY_DSN}
     env_file:
       - ./.env
-    command: ["python", "main.py"]
+    command: ["python", "main.py", "--interval", "3600", "config.yaml"]
